--- a/src/common/search.less
+++ b/src/common/search.less
@@ -1,7 +1,7 @@
 .search_container {
     width: 100%;
     height: 100vh;
-    padding-top: 60px;
+    padding-top: 50px;
     box-sizing: border-box;
     background-color: #151617;
     .header {
@@ -22,6 +22,10 @@
             border-bottom: 1px solid rgba(#fff,0.3);
             font-size: 14px;
             color: #fff;
+        }
+        .close {
+            position: absolute;
+            right: 15px;
         }
     }
     .content {
